feat(auth): implementación de estructura hexagonal y el caso de uso Login
He cambiado la estructura del proyecto para que el componente Login no se comunique directamente con
el authService, sino con el puerto.

--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,9 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "type": "component",
+          "style": "scss",
+          "standalone": true
         }
       },
       "root": "",
