--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
       "files": ["*.ts"],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
-        "project": ["tsconfig.json"],
+        "project": ["./tsconfig.eslint.json"],
         "createDefaultProgram": true
       },
       "plugins": ["@typescript-eslint", "@angular-eslint"],
