--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,9 +7,11 @@
     "types": []
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "src/**/**/*.ts"
   ],
   "exclude": [
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "src/**/**/*.spec.ts"
   ]
 }
