--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,32 +1,3 @@
 {
-  "root": true,
-  "ignorePatterns": ["projects/**/*"],
-  "overrides": [
-    {
-      "files": ["*.ts"],
-      "parser": "@typescript-eslint/parser",
-      "parserOptions": {
-        "project": ["./tsconfig.eslint.json"],
-        "createDefaultProgram": true
-      },
-      "plugins": ["@typescript-eslint", "@angular-eslint"],
-      "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:@angular-eslint/recommended",
-        "prettier"
-      ],
-      "rules": {
-        "@typescript-eslint/no-unused-vars": "warn",
-        "no-console": "off"
-      }
-    },
-    {
-      "files": ["*.html"],
-      "parser": "@angular-eslint/template-parser",
-      "plugins": ["@angular-eslint/template"],
-      "extends": ["plugin:@angular-eslint/template/recommended"],
-      "rules": {}
-    }
-  ]
+  "extends": "./config/lint/.eslintrc.json"
 }
