--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,11 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
+    }
+  },
   "projects": {
     "neos-template": {
       "projectType": "application",
@@ -30,7 +35,7 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/index.scss"
             ]
           },
           "configurations": {
