--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "neos-template",
   "version": "0.0.0",
   "scripts": {
+    "lint:styles": "stylelint \"src/**/*.scss\"",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -43,6 +44,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "stylelint": "^16.24.0",
+    "stylelint-config-standard-scss": "^16.0.0",
     "typescript": "~5.9.2"
   }
 }
