test(auth and login): :test_tube: add unit test with mocks for AuthFacade2 and LoginUseCase"

--- a/config/lint/.eslintrc.json
+++ b/config/lint/.eslintrc.json
@@ -1,6 +1,10 @@
 {
   "root": true,
-  "ignorePatterns": ["projects/**/*"],
+  "ignorePatterns": [
+    "projects/**/*",
+    "dist/**",
+    "node_modules/**"
+  ],
   "overrides": [
     {
       "files": ["*.ts"],
@@ -27,6 +31,12 @@
       "plugins": ["@angular-eslint/template"],
       "extends": ["plugin:@angular-eslint/template/recommended"],
       "rules": {}
+    },
+    {
+      "files": ["e2e/**/*.ts", "playwright.config.ts"],
+      "parserOptions": {
+        "project": ["tsconfig.e2e.json"]
+      }
     }
   ]
 }
