--- a/config/lint/.eslintrc.json
+++ b/config/lint/.eslintrc.json
@@ -1,10 +1,6 @@
 {
   "root": true,
-  "ignorePatterns": [
-    "projects/**/*",
-    "dist/**",
-    "node_modules/**"
-  ],
+  "ignorePatterns": ["projects/**/*", "dist/**", "node_modules/**"],
   "overrides": [
     {
       "files": ["*.ts"],
@@ -36,6 +32,18 @@
       "files": ["e2e/**/*.ts", "playwright.config.ts"],
       "parserOptions": {
         "project": ["tsconfig.e2e.json"]
+      }
+    },
+    {
+      "files": ["module-federation.config.ts", "webpack*.ts", "webpack*.js"],
+      "parser": "espree",
+      "parserOptions": {
+        "ecmaVersion": 2020,
+        "sourceType": "module"
+      },
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off",
+        "@typescript-eslint/no-unused-vars": "off"
       }
     }
   ]
