--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,3 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -12,22 +10,35 @@
     "isolatedModules": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-
     "target": "ES2022",
     "module": "preserve",
     "moduleResolution": "bundler",
-
     "baseUrl": "src",
     "paths": {
-      "@app/*": ["app/*"],
-      "@core/*": ["app/core/*"],
-      "@shared/*": ["app/shared/*"],
-      "@domain/*": ["app/domain/*"],
-      "@infra/*": ["app/infrastructure/*"],
-      "@presentation/*": ["app/presentation/*"]
+      "@app/*": [
+        "app/*"
+      ],
+      "@core/*": [
+        "app/core/*"
+      ],
+      "@shared/*": [
+        "app/shared/*"
+      ],
+      "@domain/*": [
+        "app/domain/*"
+      ],
+      "@infra/*": [
+        "app/infrastructure/*"
+      ],
+      "@presentation/*": [
+        "app/presentation/*"
+      ]
     },
-
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2022",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
@@ -40,7 +51,11 @@
   },
   "files": [],
   "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.spec.json" }
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    }
   ]
 }
