--- a/angular.json
+++ b/angular.json
@@ -72,12 +72,13 @@
           "builder": "ngx-build-plus:dev-server",
           "options": {
             "port": 4301,
-            "publicHost": "http://angular-template-red.vercel.app",
+            "publicHost": "http://localhost:4301",
             "extraWebpackConfig": "webpack.config.js"
           },
           "configurations": {
             "production": {
-              "buildTarget": "neos-template:build:production"
+              "buildTarget": "neos-template:build:production",
+              "publicHost": "https://angular-template-red.vercel.app"
             },
             "development": {
               "buildTarget": "neos-template:build:development"
