--- a/config/lint/.eslintrc.json
+++ b/config/lint/.eslintrc.json
@@ -18,7 +18,8 @@
       ],
       "rules": {
         "@typescript-eslint/no-unused-vars": "warn",
-        "no-console": "off"
+        "no-console": "off",
+        "@typescript-eslint/no-explicit-any": "off"
       }
     },
     {
