--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
             ],
             "styles": ["src/styles.scss"],
             "extraWebpackConfig": "webpack.config.js",
-            "commonChunk": false
+            "commonChunk": false,
+            "deleteOutputPath": true
           },
           "configurations": {
             "production": {
@@ -57,12 +58,20 @@
                 }
               ],
               "outputHashing": "all",
+              "deployUrl": "/",
+              "baseHref": "/",
+              "sourceMap": false,
+              "optimization": true,
+              "extractLicenses": true,
+              "buildOptimizer": true,
               "extraWebpackConfig": "webpack.prod.config.js"
             },
             "development": {
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true,
+              "deployUrl": "/",
+              "baseHref": "/",
               "extraWebpackConfig": "webpack.config.js"
             }
           },
