--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
   "private": true,
   "dependencies": {
     "@angular-architects/module-federation": "^20.0.0",
-    "@angular/cdk": "^20.2.4",
-    "@angular/common": "^20.2.0",
-    "@angular/compiler": "^20.2.0",
-    "@angular/core": "^20.2.0",
-    "@angular/forms": "^20.2.0",
-    "@angular/platform-browser": "^20.2.0",
-    "@angular/router": "^20.2.0",
+    "@angular/cdk": "~20.3.0",
+    "@angular/common": "~20.3.0",
+    "@angular/compiler": "~20.3.0",
+    "@angular/core": "~20.3.0",
+    "@angular/forms": "~20.3.0",
+    "@angular/platform-browser": "~20.3.0",
+    "@angular/router": "~20.3.0",
     "ngx-build-plus": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
